# sdpmpd

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
sdpmpd/: main.py  tui.py
